# Heart-rate-monitor

./: .env  .gitignore  .postgresql.conf.swp  Cargo.toml  Dockerfile  Dockerfile.oracle-test  Dockerfile.postgres  README.md  a.rs  docker-compose.yml
dashboard/: index.html
dashboard/assets/: chartsBT.js
dashboard/pages/: beat-track.html  dashboard.html  google-login.html  otp.ejs  otp.html  signup.html  sitemap.html  test.html  training-record-0615.html  training-record.html
heart-dashboard/: .index.html.swp  index.html
heart-dashboard/pages/: sign-in.html  (+1 more)
heart-server-rust/: .gitignore  Cargo.toml  Dockerfile.rust  README.md  docker-compose.yml  postgresql.conf
heart-server-rust/src/: README.md  main.rs  websocket.rs
heart-server-rust/src-bak/: main.rs  websocket.rs
heart-server-rust/src-bak/mdns/: mod.rs
heart-server-rust/src/db/: client.rs  mod.rs
heart-server-rust/src/mdns/: mdns_sd.rs
heart-server-rust/src/routes/: README.md  data.rs  heartinfo.rs  mapinfo.rs  min_hrt.rs  mod.rs  month_hrt.rs  recent.rs  server_status.rs  time.rs  userinfo.rs  userupdate.rs
heart-server-rust/src/routes/hrt/: day_hrt.rs  hour_hrt.rs  min_hrt.rs  mod.rs  week_hrt.rs  year_hrt.rs
heart-server-rust/src/tests/: test.rs
heart-server-rust/workflows/: rust.yml
rshash/: Cargo.toml  file_hashes.json
rust-ws/: index.js
src/: main.rs
web-server/: .env  authController.js  bpm.js  chart.js  controltower.js  firebase.js  firebase_login.html  google_authController.js  google_login.html  hrv.js  login_v1.js  mail_auth.js  oracledb.js  oracledb_notuse.js  package-lock.json  package.json  server-0615.js  server.js  server.js.bk  server.js.test  server1.js  signin.html  signup.html  singup.html  top.js  utility.js
(+39 files in other folders)
